# mm_nes

./: Cargo.toml  LICENSE  README.md  bitbucket-pipelines.yaml  bitbucket-pipelines.yml
mmnes_core/: Cargo.toml
mmnes_core/src/: apu.rs  apu_rp2a03.rs  bus.rs  bus_device.rs  cartridge.rs  controller.rs  cpu.rs  cpu_6502.rs  cpu_6502_debugger.rs  cpu_debugger.rs  dma.rs  dma_device.rs  frame.rs  ines_loader.rs  input.rs  input_external.rs  input_sdl2.rs  instructions_macro_all.rs  irq_source.rs  key_event.rs  lib.rs  mapper.rs  memory.rs  memory_bank.rs  memory_ciram.rs  memory_mirror.rs  memory_palette.rs  mmc1_cartridge.rs  nes_bus.rs  nes_console.rs  nes_frame.rs  nes_samples.rs  nrom_cartridge.rs  palette_2c02.rs  ppu.rs  ppu_2c02.rs  ppu_dma.rs  renderer.rs  sound_playback.rs  sound_playback_passive.rs  (+5 more)
mmnes_core/src/assets/: build_instruction_functions.sh  instruction_functions.txt
mmnes_core/src/tests/: cartridge.rs  cpu_6502.rs  input_external.rs  key_events.rs  memory_bank.rs  memory_ciram.rs  memory_mirror.rs  mod.rs  nes_bus.rs  nes_samples.rs  ppu_2c02.rs  ppu_dma.rs  sound_playback_passive.rs
mmnes_frontend/: Cargo.toml
mmnes_frontend/src/: ai_widget.rs  ai_worker.rs  debugger_ui.rs  debugger_widget.rs  helpers_ui.rs  image_text_button.rs  llm_client.rs  llm_orchestrator.rs  main.rs  nes_front_end.rs  nes_front_ui.rs  nes_mediator.rs  nes_message.rs  nes_rom_metadata_widget.rs  nes_rom_metadata_worker.rs  nes_ui.rs  nes_ui_widget.rs  openai_llm.rs  renderer_widget.rs  sound_player.rs  square_icon_button.rs  text_8x8_generator.rs  tooltip.rs  tooltip_6502.rs
mmnes_frontend/src/tests/: llm_client.rs  mod.rs  nes_rom_metadata_worker.rs
mmretrodb/: Cargo.toml
mmretrodb/src/: lib.rs  nes_rom.rs  nes_rom_metadata.rs  rdb.rs
mmretrodb/src/tests/: mod.rs  rdb.rs
src/: apu.rs  apu_rp2a03.rs  bus.rs  bus_device.rs  cartridge.rs  cpu.rs  cpu_6502.rs  dma.rs  dma_device.rs  dummy_device.rs  frame.rs  ines_loader.rs  input.rs  input_sdl2.rs  instruction_macro_nostd.rs  instructions_macro_all.rs  instructions_macro_std.rs  irq_source.rs  loader.rs  main.rs  mapper.rs  memory.rs  memory_64k.rs  memory_bank.rs  memory_mirror.rs  memory_palette.rs  nes_bus.rs  nes_console.rs  nrom128_cartridge.rs  nrom_cartridge.rs  palette.rs  palette_2c02.rs  ppu.rs  ppu_2c02.rs  ppu_dma.rs  renderer.rs  sound_playback.rs  sound_playback_sdl2.rs  sound_playback_sdl2_callback.rs  sound_playback_sdl2_queue.rs  (+3 more)
src/assets/: build_instruction_functions.sh  build_instruction_macro.sh  instruction_functions.txt  instructions-all.csv  instructions.txt
src/tests/: cpu_6502.rs  memory_64k.rs  memory_bank.rs  memory_mirror.rs  mod.rs  nes_bus.rs  ppu_2c02.rs
