[package]
name = "mm_nes"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_info"] }
simplelog = { version = "0.12.2" }
once_cell = "1.19.0"
lazy_static = "1.5.0"
clap = { version = "4.5.15", features = ["derive"] }
clap-num = "1.1.1"


[dev-dependencies]
mockall = "0.13.0"
simplelog = { version = "0.12.2", features = ["test"] }

