[package]
name = "mmnes_core"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_info"] }
simplelog = { version = "0.12.2" }
once_cell = "1.19.0"
#sdl2 = { version = "0.37.0", features = ["unsafe_textures"] }

[dev-dependencies]
mockall = "0.13.0"
simplelog = { version = "0.12.2", features = ["test"] }
tempfile = "3.21.0"

[lib]
crate-type = ["lib"]

[features]
ppu_tile_cache = []
#default = ["ppu_tile_cache"]
default = []


