[package]
name = "mmnes_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_info"] }
simplelog = { version = "0.12.2" }
clap = { version = "4.5.15", features = ["derive"] }
clap-num = "1.1.1"
mmnes_core = { workspace = true }

[dev-dependencies]
mockall = "0.13.0"
simplelog = { version = "0.12.2", features = ["test"] }


