[package]
name = "mmnes_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_info"] }
simplelog = { version = "0.12.2" }
clap = { version = "4.5.15", features = ["derive"] }
clap-num = "1.1.1"
mmnes_core = { workspace = true }
eframe = "0.32.3"
egui_extras = { version = "0.32.3" , features = ["image"] }
image = { version = "0.25.8", features = ["jpeg", "png"] }
sdl2 = { version = "0.37.0" }
egui-file-dialog = "0.11.0"
font8x8 = "0.3.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
base64 = "0.22.1"

[dev-dependencies]
#mockall = "0.13.0"
simplelog = { version = "0.12.2", features = ["test"] }
